Updating for processing different years

--- a/code/utils/snodas-snow-depth-file-wrangling.ipynb
+++ b/code/utils/snodas-snow-depth-file-wrangling.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Script name: average-farm-size-raster-construction.R\n",
+    "## Script name: snodas-snow-depth-file-wrangling.ipynb\n",
     "##\n",
     "## Purpose of script:Extracting only necessary files describing snow depth from SNODAS data download and placing them in a 'keep' folder for further processing \n",
     "##\n",
@@ -19,75 +19,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "us_ssmv11036tS__T0001TTNATS2017121605HP001.dat.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017120105HP001.dat.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017122205HP001.txt.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017120505HP001.dat.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017120805HP001.txt.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017121205HP001.dat.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017123105HP001.txt.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017122605HP001.txt.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017120205HP001.dat.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017121805HP001.txt.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017121505HP001.dat.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017122105HP001.txt.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017121105HP001.dat.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017120605HP001.dat.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017122505HP001.txt.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017122805HP001.dat.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017120105HP001.txt.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017121605HP001.txt.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017122205HP001.dat.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017121205HP001.txt.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017120505HP001.txt.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017120805HP001.dat.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017122605HP001.dat.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017123105HP001.dat.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017121805HP001.dat.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017121505HP001.txt.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017120205HP001.txt.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017122105HP001.dat.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017120605HP001.txt.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017121105HP001.txt.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017122505HP001.dat.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017122805HP001.txt.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017122905HP001.txt.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017122405HP001.dat.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017121005HP001.txt.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017120705HP001.txt.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017122005HP001.dat.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017120305HP001.txt.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017121405HP001.txt.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017121905HP001.dat.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017123005HP001.dat.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017122705HP001.dat.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017120905HP001.dat.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017120405HP001.txt.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017121305HP001.txt.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017122305HP001.dat.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017121705HP001.txt.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017122905HP001.dat.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017122405HP001.txt.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017120705HP001.dat.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017121005HP001.dat.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017122005HP001.txt.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017121405HP001.dat.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017121905HP001.txt.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017120305HP001.dat.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017122705HP001.txt.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017123005HP001.txt.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017121305HP001.dat.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017120905HP001.txt.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017120405HP001.dat.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017122305HP001.txt.gz has been copied.\n",
-      "us_ssmv11036tS__T0001TTNATS2017121705HP001.dat.gz has been copied.\n"
+      "us_ssmv11036tS__T0001TTNATS2019121305HP001.txt.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019120905HP001.dat.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019120405HP001.txt.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019122705HP001.dat.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019123005HP001.dat.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019121705HP001.txt.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019122305HP001.dat.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019120705HP001.txt.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019121005HP001.txt.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019122905HP001.txt.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019122405HP001.dat.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019121405HP001.txt.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019121905HP001.dat.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019120305HP001.txt.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019122005HP001.dat.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019120905HP001.txt.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019120405HP001.dat.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019121305HP001.dat.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019123005HP001.txt.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019122705HP001.txt.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019121705HP001.dat.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019122305HP001.txt.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019121005HP001.dat.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019120705HP001.dat.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019122905HP001.dat.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019122405HP001.txt.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019120305HP001.dat.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019121405HP001.dat.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019121905HP001.txt.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019122005HP001.txt.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019122105HP001.txt.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019121805HP001.txt.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019121505HP001.dat.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019120205HP001.dat.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019122505HP001.txt.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019122805HP001.dat.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019120605HP001.dat.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019121105HP001.dat.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019122205HP001.txt.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019120105HP001.dat.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019121605HP001.dat.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019122605HP001.txt.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019123105HP001.txt.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019121205HP001.dat.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019120505HP001.dat.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019120805HP001.txt.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019122105HP001.dat.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019120205HP001.txt.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019121805HP001.dat.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019121505HP001.txt.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019122505HP001.dat.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019122805HP001.txt.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019121105HP001.txt.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019120605HP001.txt.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019122205HP001.dat.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019121605HP001.txt.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019120105HP001.txt.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019123105HP001.dat.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019122605HP001.dat.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019120505HP001.txt.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019120805HP001.dat.gz has been copied.\n",
+      "us_ssmv11036tS__T0001TTNATS2019121205HP001.txt.gz has been copied.\n"
      ]
     }
    ],
@@ -96,8 +96,8 @@
     "import shutil\n",
     "\n",
     "# Specify the path to the input and output folders\n",
-    "input_folder = \"/Users/patrickfreeman-csp/Downloads/SNODAS_2017/12_Dec\"\n",
-    "output_folder = \"/Users/patrickfreeman-csp/Downloads/SNODAS_2017/12_Dec/keep\"\n",
+    "input_folder = \"/Users/patrickfreeman-csp/Downloads/SNODAS_2019/12_Dec\"\n",
+    "output_folder = \"/Users/patrickfreeman-csp/Downloads/SNODAS_2019/12_Dec/keep\"\n",
     "\n",
     "# Specify the prefix you want to extract\n",
     "prefix = \"us_ssmv11036tS_\"  # Replace \"prefix_\" with your desired prefix\n",
