--- a/code/bobwhite-sdm-covariate-construction.ipynb
+++ b/code/bobwhite-sdm-covariate-construction.ipynb
@@ -10,12 +10,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from datetime import date\n",
-    "today = date.today()"
+    "today = date.today()\n",
+    "import ee\n",
+    "import math\n",
+    "import geemap\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "\n",
+    "\n",
+    "# Initialize ee and authenticate \n",
+    "#ee.Authenticate()\n",
+    "ee.Initialize()\n"
    ]
   },
   {
@@ -110,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,9 +212,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lui Band names: ['Ag', 'Urban', 'Transport', 'Energy']\n",
+      "lui_focal_means Band names: ['Ag_10km', 'Urban_10km', 'Transport_10km', 'Energy_10km']\n"
+     ]
+    }
+   ],
    "source": [
     "lui = ee.Image(\"projects/GEE_CSP/aft-connectivity/Land-use-intensity-multiband-focal-sp-250m-20220123\")\n",
     "\n",
@@ -228,9 +248,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rap_cover_2016 Band names: ['2016_AFG', '2016_PFG', '2016_SHR', '2016_TRE', '2016_BGR', '2017_AFG', '2017_PFG', '2017_SHR', '2017_TRE', '2017_BGR', '2018_AFG', '2018_PFG', '2018_SHR', '2018_TRE', '2018_BGR', '2019_AFG', '2019_PFG', '2019_SHR', '2019_TRE', '2019_BGR', '2021_AFG', '2021_PFG', '2021_SHR', '2021_TRE', '2021_BGR']\n",
+      "rap_cover_all_small Band names: ['2016_AFG_5km', '2016_PFG_5km', '2016_SHR_5km', '2016_TRE_5km', '2016_BGR_5km', '2017_AFG_5km', '2017_PFG_5km', '2017_SHR_5km', '2017_TRE_5km', '2017_BGR_5km', '2018_AFG_5km', '2018_PFG_5km', '2018_SHR_5km', '2018_TRE_5km', '2018_BGR_5km', '2019_AFG_5km', '2019_PFG_5km', '2019_SHR_5km', '2019_TRE_5km', '2019_BGR_5km', '2021_AFG_5km', '2021_PFG_5km', '2021_SHR_5km', '2021_TRE_5km', '2021_BGR_5km']\n"
+     ]
+    }
+   ],
    "source": [
     "geometry = ee.Feature(ee.FeatureCollection(\"projects/GEE_CSP/pf-bobwhite/bobwhite_model_states\").first());\n",
     "##---------- Define the years that you want to export --------------\n",
@@ -279,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,16 +360,91 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Snodas data band names: ['snodays_17_5km', 'snodays_18_5km', 'snodays_19_5km', 'snodays_21_5km']\n"
+     ]
+    }
+   ],
+   "source": [
+    "snodas_17 = ee.Image(\"projects/GEE_CSP/pf-bobwhite/SNODAS/snodas_days_snowdepth_2017_WGS84\").rename('snodays_17')\n",
+    "snodas_18 = ee.Image(\"projects/GEE_CSP/pf-bobwhite/SNODAS/snodas_days_snowdepth_2018_WGS84\").rename('snodays_18')\n",
+    "snodas_19 = ee.Image(\"projects/GEE_CSP/pf-bobwhite/SNODAS/snodas_days_snowdepth_2019_WGS84\").rename('snodays_19')\n",
+    "snodas_21 = ee.Image(\"projects/GEE_CSP/pf-bobwhite/SNODAS/snodas_days_snowdepth_2021_WGS84\").rename('snodays_21')\n",
+    "\n",
+    "snodas_all = ee.Image([snodas_17, snodas_18, snodas_19, snodas_21])\n",
+    "\n",
+    "snodas_small = focal_mean(snodas_all, rad_small, \"meters\", name_small).clip(geometry)\n",
+    "snodas_small_band_names = snodas_small.bandNames()\n",
+    "print('Snodas data band names:', snodas_small_band_names.getInfo())  # ee.List of band names\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# NASS and CRP Stats on Farm Size and Proportion of County Land in CRP categories positive for bobwhite"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "avg_farm_size = ee.Image(\"projects/GEE_CSP/pf-bobwhite/NASS_CRP/nass_2017_average_farm_size\").rename('avg_farm_size_17')\n",
+    "prop_crp = ee.Image(\"projects/GEE_CSP/pf-bobwhite/NASS_CRP/proportion-county-land-crp-2020\").rename('prop_crp_acres_20')\n",
+    "\n",
+    "nass_crp_all = ee.Image([avg_farm_size, prop_crp])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Bring all covariates together into a single projection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lui_prep = lui_focal_means_small.reproject(crs=projection, scale=5000)\n",
+    "rap_prep = rap_cover_all_small.reproject(crs=projection, scale=5000)\n",
+    "climate_prep = climate_small.reproject(crs=projection, scale=5000)\n",
+    "snodas_prep = snodas_all.reproject(crs=projection, scale=5000)\n",
+    "nass_crp_prep = nass_crp_all.reproject(crs=projection,scale=5000)\n",
+    "\n",
+    "covs = ee.Image([lui_prep, rap_prep, climate_prep, snodas_prep, nass_crp_prep])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "snodas_17 = ee.Image(\"projects/GEE_CSP/pf-bobwhite/SNODAS/snodas_days_snowdepth_2017_WGS84\")\n",
-    "snodas_18 = ee.Image(\"projects/GEE_CSP/pf-bobwhite/SNODAS/snodas_days_snowdepth_2018_WGS84\")\n",
-    "snodas_19 = ee.Image(\"projects/GEE_CSP/pf-bobwhite/SNODAS/snodas_days_snowdepth_2019_WGS84\")\n",
-    "snodas_21 = ee.Image(\"projects/GEE_CSP/pf-bobwhite/SNODAS/snodas_days_snowdepth_2021_WGS84\")\n",
     "\n",
-    "snodas_all = ee.Image([snodas_17, snodas_18, snodas_19, snodas_21])"
+    "vis_params = {\n",
+    "    'bands': 'Ag_5km',\n",
+    "    'min': 0,\n",
+    "    'max': 1,\n",
+    "    'palette': ['006633', 'E5FFCC', '662A00', 'D8D8D8', 'F5F5F5'],\n",
+    "}\n",
+    "## Plot to check \n",
+    "Map = geemap.Map(center=(40, -100), zoom=4)\n",
+    "Map.addLayer(lui.prep, vis_params, \"LUI reprojected\", True)\n",
+    "Map.addLayer(lui_focal_means_small, vis_params, \"LUI original\", False)\n",
+    "Map\n"
    ]
   },
   {
@@ -353,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -362,9 +466,9 @@
      "text": [
       "/Users/patrickfreeman-csp/Downloads\n",
       "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/tables/7267b8c8aafd90b63bb2808f468bd1d1-c1f27872f906f4ff5b304bcac76c80c3:getFeatures\n",
+      "Downloading data from https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/tables/8832afed8f7d9dd20c6f268f44c94532-ec3f3a21ab3b81d97ebfedb85e2bbc16:getFeatures\n",
       "Please wait ...\n",
-      "Data downloaded to /Users/patrickfreeman-csp/Downloads/randomClimate.csv\n"
+      "Data downloaded to /Users/patrickfreeman-csp/Downloads/randomPtsCovs.csv\n"
      ]
     }
    ],
@@ -373,8 +477,8 @@
     "randomPts = ee.FeatureCollection.randomPoints(region.geometry(), 5000)\n",
     "work_dir = os.path.expanduser('~/Downloads')\n",
     "print(work_dir)\n",
-    "out_csv = os.path.join(work_dir, 'randomClimate.csv')\n",
-    "extraction = geemap.extract_values_to_points(randomPts, climate_small, out_csv)\n"
+    "out_csv = os.path.join(work_dir, 'randomPtsCovs.csv')\n",
+    "extraction = geemap.extract_values_to_points(randomPts, covs, out_csv)\n"
    ]
   },
   {
