--- a/code/bobwhite-sdm-covariate-construction.ipynb
+++ b/code/bobwhite-sdm-covariate-construction.ipynb
@@ -44,7 +44,7 @@
     "## Author: \n",
     "Patrick Freeman (CSP)\n",
     "## Date Created: \n",
-    "03/15/23\n",
+    "04/21/23\n",
     "## Date last modified:\n",
     "print('Last Updated On: ', datetime.datetime.now())\n",
     "## Email: \n",
@@ -250,16 +250,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "rap_cover_2016 Band names: ['2016_AFG', '2016_PFG', '2016_SHR', '2016_TRE', '2016_BGR', '2017_AFG', '2017_PFG', '2017_SHR', '2017_TRE', '2017_BGR', '2018_AFG', '2018_PFG', '2018_SHR', '2018_TRE', '2018_BGR', '2019_AFG', '2019_PFG', '2019_SHR', '2019_TRE', '2019_BGR', '2021_AFG', '2021_PFG', '2021_SHR', '2021_TRE', '2021_BGR']\n",
-      "rap_cover_all_small Band names: ['2016_AFG_5km', '2016_PFG_5km', '2016_SHR_5km', '2016_TRE_5km', '2016_BGR_5km', '2017_AFG_5km', '2017_PFG_5km', '2017_SHR_5km', '2017_TRE_5km', '2017_BGR_5km', '2018_AFG_5km', '2018_PFG_5km', '2018_SHR_5km', '2018_TRE_5km', '2018_BGR_5km', '2019_AFG_5km', '2019_PFG_5km', '2019_SHR_5km', '2019_TRE_5km', '2019_BGR_5km', '2021_AFG_5km', '2021_PFG_5km', '2021_SHR_5km', '2021_TRE_5km', '2021_BGR_5km']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "geometry = ee.Feature(ee.FeatureCollection(\"projects/GEE_CSP/pf-bobwhite/bobwhite_model_states\").first());\n",
     "##---------- Define the years that you want to export --------------\n",
@@ -279,22 +270,22 @@
     "\n",
     "\n",
     "### Filter RAP cover ImageCollection into yearly sets\n",
-    "rap_cover_2016 = cover_toExport.filter(ee.Filter.inList('year', ee.List([2016]))).toBands()\n",
-    "rap_cover_2017 = cover_toExport.filter(ee.Filter.inList('year', ee.List([2017]))).toBands()\n",
+    "#rap_cover_2016 = cover_toExport.filter(ee.Filter.inList('year', ee.List([2016]))).toBands()\n",
+    "#rap_cover_2017 = cover_toExport.filter(ee.Filter.inList('year', ee.List([2017]))).toBands()\n",
     "rap_cover_2018 = cover_toExport.filter(ee.Filter.inList('year', ee.List([2018]))).toBands()\n",
     "rap_cover_2019 = cover_toExport.filter(ee.Filter.inList('year', ee.List([2019]))).toBands()\n",
     "rap_cover_2021 = cover_toExport.filter(ee.Filter.inList('year', ee.List([2021]))).toBands()\n",
     "\n",
     "### Combine all into single multiband image \n",
-    "rap_cover_all = ee.Image([rap_cover_2016, rap_cover_2017, rap_cover_2018, rap_cover_2019, rap_cover_2021])\n",
+    "rap_cover_all = ee.Image([rap_cover_2018, rap_cover_2019, rap_cover_2021])\n",
     "\n",
     "rap_cover_all_band_names = rap_cover_all.bandNames()\n",
-    "print('rap_cover_2016 Band names:', rap_cover_all_band_names.getInfo())  # ee.List of band names\n",
+    "#print('rap_cover_2016 Band names:', rap_cover_all_band_names.getInfo())  # ee.List of band names\n",
     "\n",
     "### Apply focal mean smoothing\n",
     "rap_cover_all_small = focal_mean(rap_cover_all, rad_small, \"meters\", name_small).clip(geometry)\n",
-    "rap_cover_all_small_band_names = rap_cover_all_small.bandNames()\n",
-    "print('rap_cover_all_small Band names:', rap_cover_all_small_band_names.getInfo())  # ee.List of band names\n",
+    "#rap_cover_all_small_band_names = rap_cover_all_small.bandNames()\n",
+    "#print('rap_cover_all_small Band names:', rap_cover_all_small_band_names.getInfo())  # ee.List of band names\n",
     "\n"
    ]
   },
@@ -308,43 +299,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "### Load daymet dataset \n",
-    "daymet_17 = ee.ImageCollection(\"NASA/ORNL/DAYMET_V4\").filter(ee.Filter.date('2017-01-01', '2017-12-31'))\n",
+    "#daymet_17 = ee.ImageCollection(\"NASA/ORNL/DAYMET_V4\").filter(ee.Filter.date('2017-01-01', '2017-12-31'))\n",
     "daymet_18 = ee.ImageCollection(\"NASA/ORNL/DAYMET_V4\").filter(ee.Filter.date('2018-01-01', '2018-12-31'))\n",
     "daymet_19 = ee.ImageCollection(\"NASA/ORNL/DAYMET_V4\").filter(ee.Filter.date('2019-01-01', '2019-12-31'))\n",
     "daymet_21 = ee.ImageCollection(\"NASA/ORNL/DAYMET_V4\").filter(ee.Filter.date('2021-01-01', '2021-12-31'))\n",
     "\n",
     "\n",
     "### mean daily max temperature\n",
-    "tmax_17 = daymet_17.select(\"tmax\").mean().clip(geometry).rename(['tmax_17'])\n",
+    "#tmax_17 = daymet_17.select(\"tmax\").mean().clip(geometry).rename(['tmax_17'])\n",
     "tmax_18 = daymet_18.select(\"tmax\").mean().clip(geometry).rename(['tmax_18'])\n",
     "tmax_19 = daymet_19.select(\"tmax\").mean().clip(geometry).rename(['tmax_19'])\n",
     "tmax_21 = daymet_21.select(\"tmax\").mean().clip(geometry).rename(['tmax_21'])\n",
     "\n",
     "### mean daily min temperature\n",
-    "tmin_17 = daymet_17.select(\"tmin\").mean().clip(geometry).rename(['tmin_17'])\n",
+    "#tmin_17 = daymet_17.select(\"tmin\").mean().clip(geometry).rename(['tmin_17'])\n",
     "tmin_18 = daymet_18.select(\"tmin\").mean().clip(geometry).rename(['tmin_18'])\n",
     "tmin_19 = daymet_19.select(\"tmin\").mean().clip(geometry).rename(['tmin_19'])\n",
     "tmin_21 = daymet_21.select(\"tmin\").mean().clip(geometry).rename(['tmin_21'])\n",
     "\n",
     "### mean daily precip\n",
-    "prcp_17 = daymet_17.select(\"prcp\").mean().clip(geometry).rename(['prcp_17'])\n",
+    "#prcp_17 = daymet_17.select(\"prcp\").mean().clip(geometry).rename(['prcp_17'])\n",
     "prcp_18 = daymet_18.select(\"prcp\").mean().clip(geometry).rename(['prcp_18'])\n",
     "prcp_19 = daymet_19.select(\"prcp\").mean().clip(geometry).rename(['prcp_19'])\n",
     "prcp_21 = daymet_21.select(\"prcp\").mean().clip(geometry).rename(['prcp_21'])\n",
     "\n",
     "### mean daily snow water equivalent\n",
-    "swe_17 = daymet_17.select(\"swe\").mean().clip(geometry).rename(['swe_17'])\n",
+    "#swe_17 = daymet_17.select(\"swe\").mean().clip(geometry).rename(['swe_17'])\n",
     "swe_18 = daymet_18.select(\"swe\").mean().clip(geometry).rename(['swe_18'])\n",
     "swe_19 = daymet_19.select(\"swe\").mean().clip(geometry).rename(['swe_19'])\n",
     "swe_21 = daymet_21.select(\"swe\").mean().clip(geometry).rename(['swe_21'])\n",
     "\n",
-    "climate_all = ee.Image([tmax_17, tmax_18, tmax_19, tmax_21, tmin_17, tmin_18, tmin_19, tmin_21, \n",
-    "                        prcp_17, prcp_18, prcp_19, prcp_21, swe_17, swe_18, swe_19, swe_21])\n",
+    "climate_all = ee.Image([ tmax_18, tmax_19, tmax_21, tmin_18, tmin_19, tmin_21, \n",
+    "                        prcp_18, prcp_19, prcp_21, swe_18, swe_19, swe_21])\n",
     "\n",
     "climate_small = focal_mean(climate_all, rad_small, \"meters\", name_small).updateMask(conus_img).clip(geometry)\n",
     "\n"
@@ -360,24 +351,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Snodas data band names: ['snodays_17_5km', 'snodays_18_5km', 'snodays_19_5km', 'snodays_21_5km']\n"
+      "Snodas data band names: ['snodays_18_5km', 'snodays_19_5km', 'snodays_21_5km']\n"
      ]
     }
    ],
    "source": [
-    "snodas_17 = ee.Image(\"projects/GEE_CSP/pf-bobwhite/SNODAS/snodas_days_snowdepth_2017_WGS84\").rename('snodays_17')\n",
+    "#snodas_17 = ee.Image(\"projects/GEE_CSP/pf-bobwhite/SNODAS/snodas_days_snowdepth_2017_WGS84\").rename('snodays_17')\n",
     "snodas_18 = ee.Image(\"projects/GEE_CSP/pf-bobwhite/SNODAS/snodas_days_snowdepth_2018_WGS84\").rename('snodays_18')\n",
     "snodas_19 = ee.Image(\"projects/GEE_CSP/pf-bobwhite/SNODAS/snodas_days_snowdepth_2019_WGS84\").rename('snodays_19')\n",
     "snodas_21 = ee.Image(\"projects/GEE_CSP/pf-bobwhite/SNODAS/snodas_days_snowdepth_2021_WGS84\").rename('snodays_21')\n",
     "\n",
-    "snodas_all = ee.Image([snodas_17, snodas_18, snodas_19, snodas_21])\n",
+    "snodas_all = ee.Image([snodas_18, snodas_19, snodas_21])\n",
     "\n",
     "snodas_small = focal_mean(snodas_all, rad_small, \"meters\", name_small).clip(geometry)\n",
     "snodas_small_band_names = snodas_small.bandNames()\n",
@@ -394,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,31 +419,46 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "vis_params = {\n",
-    "    'bands': 'Ag_5km',\n",
-    "    'min': 0,\n",
-    "    'max': 1,\n",
-    "    'palette': ['006633', 'E5FFCC', '662A00', 'D8D8D8', 'F5F5F5'],\n",
-    "}\n",
-    "## Plot to check \n",
-    "Map = geemap.Map(center=(40, -100), zoom=4)\n",
-    "Map.addLayer(lui.prep, vis_params, \"LUI reprojected\", True)\n",
-    "Map.addLayer(lui_focal_means_small, vis_params, \"LUI original\", False)\n",
-    "Map\n"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Extract random point data for assessment of covariate correlation"
+    "# Extract mean value of covariates in each cell of the sampling grid "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define a function to summarize the mean value of the image in each polygon of the feature collectio\n",
+    "# Define a function to summarize the mean value of each band of the image in each polygon of the feature collection\n",
+    "def summarize_mean(feature):\n",
+    "    mean_dict = image.reduceRegion(\n",
+    "        reducer=ee.Reducer.mean(),\n",
+    "        geometry=feature.geometry(),\n",
+    "        scale=250,\n",
+    "        crs='EPSG:5070'\n",
+    "    )\n",
+    "    return feature.set(mean_dict)\n",
+    "\n",
+    "grid_5km = ee.FeatureCollection(\"projects/GEE_CSP/pf-bobwhite/grid_5km\")\n",
+    "\n",
+    "\n",
+    "image = lui_focal_means_small\n",
+    "# Map the function over the feature collection\n",
+    "summary = grid_5km.map(summarize_mean)\n",
+    "\n",
+    "# Export the summary as a CSV file to Google Drive\n",
+    "task = ee.batch.Export.table.toDrive(\n",
+    "    collection=summary,\n",
+    "    description='lui_grid_summary',\n",
+    "    folder='bobwhite-covs',\n",
+    "    fileNamePrefix='grid_5km_lui_summary_250mres',\n",
+    "    fileFormat='CSV'\n",
+    ")\n",
+    "task.start()\n"
    ]
   },
   {
@@ -507,7 +513,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.5"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "722949c11c1062be71c011a99f617ef2cb85f305dcd033156e357c49092a513e"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
