--- a/code/bobwhite-sdm-covariate-construction.ipynb
+++ b/code/bobwhite-sdm-covariate-construction.ipynb
@@ -44,7 +44,7 @@
     "## Author: \n",
     "Patrick Freeman (CSP)\n",
     "## Date Created: \n",
-    "04/21/23\n",
+    "04/24/23\n",
     "## Date last modified:\n",
     "print('Last Updated On: ', datetime.datetime.now())\n",
     "## Email: \n",
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -248,9 +248,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 94,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rap_cover_all_small Band names: ['2018_AFG_5km', '2018_PFG_5km', '2018_SHR_5km', '2018_TRE_5km', '2018_BGR_5km', '2019_AFG_5km', '2019_PFG_5km', '2019_SHR_5km', '2019_TRE_5km', '2019_BGR_5km', '2021_AFG_5km', '2021_PFG_5km', '2021_SHR_5km', '2021_TRE_5km', '2021_BGR_5km']\n"
+     ]
+    }
+   ],
    "source": [
     "geometry = ee.Feature(ee.FeatureCollection(\"projects/GEE_CSP/pf-bobwhite/bobwhite_model_states\").first());\n",
     "##---------- Define the years that you want to export --------------\n",
@@ -284,8 +292,8 @@
     "\n",
     "### Apply focal mean smoothing\n",
     "rap_cover_all_small = focal_mean(rap_cover_all, rad_small, \"meters\", name_small).clip(geometry)\n",
-    "#rap_cover_all_small_band_names = rap_cover_all_small.bandNames()\n",
-    "#print('rap_cover_all_small Band names:', rap_cover_all_small_band_names.getInfo())  # ee.List of band names\n",
+    "rap_cover_all_small_band_names = rap_cover_all_small.bandNames()\n",
+    "print('rap_cover_all_small Band names:', rap_cover_all_small_band_names.getInfo())  # ee.List of band names\n",
     "\n"
    ]
   },
@@ -299,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,22 +408,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Bring all covariates together into a single projection"
+    "# Extract values at grid cell centroids"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'type': 'Feature', 'geometry': {'type': 'Point', 'coordinates': [-89.10796927232737, 47.9018434831802]}, 'id': '0000000000000000e1bf', 'properties': {'grid_id_5k': 43}}\n"
+     ]
+    }
+   ],
    "source": [
-    "lui_prep = lui_focal_means_small.reproject(crs=projection, scale=5000)\n",
-    "rap_prep = rap_cover_all_small.reproject(crs=projection, scale=5000)\n",
-    "climate_prep = climate_small.reproject(crs=projection, scale=5000)\n",
-    "snodas_prep = snodas_all.reproject(crs=projection, scale=5000)\n",
-    "nass_crp_prep = nass_crp_all.reproject(crs=projection,scale=5000)\n",
     "\n",
-    "covs = ee.Image([lui_prep, rap_prep, climate_prep, snodas_prep, nass_crp_prep])\n"
+    "### Load sampling grid\n",
+    "grid_5km = ee.FeatureCollection(\"projects/GEE_CSP/pf-bobwhite/grid_5km\")\n",
+    "\n",
+    "# Define a function to extract the centroid of a feature and create a new feature with that centroid as its geometry\n",
+    "def get_centroid(feature):\n",
+    "    keepProperties = ['grid_id_5k']\n",
+    "    centroid = feature.geometry().centroid()\n",
+    "    return ee.Feature(centroid).copyProperties(feature, keepProperties)\n",
+    "\n",
+    "# Map the get_centroid function over the FeatureCollection to create a new FeatureCollection containing just the centroids\n",
+    "centroids = grid_5km.map(get_centroid)\n",
+    "\n",
+    "# Print the result\n",
+    "print(centroids.first().getInfo())\n",
+    "\n"
    ]
   },
   {
@@ -423,76 +448,69 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Extract mean value of covariates in each cell of the sampling grid "
+    "### Approach 1: Feature extraction using reduceRegion"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define a function to summarize the mean value of the image in each polygon of the feature collectio\n",
-    "# Define a function to summarize the mean value of each band of the image in each polygon of the feature collection\n",
-    "def summarize_mean(feature):\n",
-    "    mean_dict = image.reduceRegion(\n",
-    "        reducer=ee.Reducer.mean(),\n",
-    "        geometry=feature.geometry(),\n",
-    "        scale=250,\n",
-    "        crs='EPSG:5070'\n",
-    "    )\n",
-    "    return feature.set(mean_dict)\n",
+    "#### Write function to perform the raster extraction (for each raster) -- importantly set scale to the native resolution of whatever raster you're extracting from (e.g. 30m for RAP, 250m for LUI, etc.)\n",
+    "def extract_rap_values(feature):\n",
+    "  # Get the geometry of the feature\n",
+    "  geometry = feature.geometry()\n",
     "\n",
-    "grid_5km = ee.FeatureCollection(\"projects/GEE_CSP/pf-bobwhite/grid_5km\")\n",
+    "  # Extract the raster values for the feature\n",
+    "  values = rap_cover_all_small.reduceRegion(\n",
+    "      reducer=ee.Reducer.mean(),\n",
+    "      geometry=geometry,\n",
+    "      scale=30)\n",
     "\n",
+    "  # Set the values as properties of the feature\n",
+    "  return feature.set(values)\n",
     "\n",
-    "image = lui_focal_means_small\n",
-    "# Map the function over the feature collection\n",
-    "summary = grid_5km.map(summarize_mean)\n",
+    "def extract_snodas_values(feature):\n",
+    "  geometry = feature.geometry()\n",
     "\n",
-    "# Export the summary as a CSV file to Google Drive\n",
+    "  # extract the raster values for the feature\n",
+    "  values=snodas_small.reduceRegion(\n",
+    "    reducer=ee.Reducer.mean(),\n",
+    "    geometry=geometry,\n",
+    "    scale=1000,\n",
+    "    crs='EPSG:4326'\n",
+    "  )\n",
+    "  # Set the values as properties of the feature\n",
+    "  return feature.set(values)\n",
+    "\n",
+    "def extract_nass_values(feature):\n",
+    "  geometry = feature.geometry()\n",
+    "\n",
+    "  # extract the raster values for the feature\n",
+    "  values=nass_crp_all.reduceRegion(\n",
+    "    reducer=ee.Reducer.mean(),\n",
+    "    geometry=geometry,\n",
+    "    scale=5000,\n",
+    "    crs='EPSG:5070'\n",
+    "  )\n",
+    "  # Set the values as properties of the feature\n",
+    "  return feature.set(values)\n",
+    "\n",
+    "# Map the extract_values function over the feature collection\n",
+    "#results = centroids.map(extract_values)\n",
+    "#results = centroids.map(extract_snodas_values)\n",
+    "results = centroids.map(extract_nass_values)\n",
+    "\n",
+    "# Export the feature collection as a CSV file\n",
     "task = ee.batch.Export.table.toDrive(\n",
-    "    collection=summary,\n",
-    "    description='lui_grid_summary',\n",
-    "    folder='bobwhite-covs',\n",
-    "    fileNamePrefix='grid_5km_lui_summary_250mres',\n",
-    "    fileFormat='CSV'\n",
-    ")\n",
-    "task.start()\n"
+    "    collection=results,\n",
+    "    description='nass-export',\n",
+    "    folder='GEE_exports',\n",
+    "    fileNamePrefix='nass_5km',\n",
+    "    fileFormat='CSV')\n",
+    "task.start()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/patrickfreeman-csp/Downloads\n",
-      "Generating URL ...\n",
-      "Downloading data from https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/tables/8832afed8f7d9dd20c6f268f44c94532-ec3f3a21ab3b81d97ebfedb85e2bbc16:getFeatures\n",
-      "Please wait ...\n",
-      "Data downloaded to /Users/patrickfreeman-csp/Downloads/randomPtsCovs.csv\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Extract local covariate values from multi-band predictor image at 5000 random points\n",
-    "randomPts = ee.FeatureCollection.randomPoints(region.geometry(), 5000)\n",
-    "work_dir = os.path.expanduser('~/Downloads')\n",
-    "print(work_dir)\n",
-    "out_csv = os.path.join(work_dir, 'randomPtsCovs.csv')\n",
-    "extraction = geemap.extract_values_to_points(randomPts, covs, out_csv)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
