--- a/code/utils/gee-gradient-analysis-WORKING.ipynb
+++ b/code/utils/gee-gradient-analysis-WORKING.ipynb
@@ -2,44 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<p>To authorize access needed by Earth Engine, open the following\n",
-       "        URL in a web browser and follow the instructions:</p>\n",
-       "        <p><a href=https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=4Zw_444K_vMWdrmYrSdd1Jxsrflof0ttlYHWlO09U4g&tc=RFFPDVrxZ5RL2KOPG8jTtcER_XOQKbNsew9nKeoDWPU&cc=FAyLekCZ_iMQTf7bTzRYTgZDWPkGgOMygI6ig64N4D4>https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=4Zw_444K_vMWdrmYrSdd1Jxsrflof0ttlYHWlO09U4g&tc=RFFPDVrxZ5RL2KOPG8jTtcER_XOQKbNsew9nKeoDWPU&cc=FAyLekCZ_iMQTf7bTzRYTgZDWPkGgOMygI6ig64N4D4</a></p>\n",
-       "        <p>The authorization workflow will generate a code, which you should paste in the box below.</p>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Successfully saved authorization token.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import ee\n",
     "# Initialize ee and authenticate \n",
-    "ee.Authenticate()\n",
+    "#ee.Authenticate()\n",
     "ee.Initialize()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,13 +38,13 @@
     "conus_img = ee.Image(\"projects/GEE_CSP/thirty-by-thirty/aoi_conus_mask\")\n",
     "\n",
     "# export scale and projection\n",
-    "scale = 250\n",
+    "# scale = 250\n",
     "projection = ee.Projection('EPSG:5070') # stand-in for now. Figure out best projection to use "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +65,7 @@
     "    return image.reduceNeighborhood(kernel = ee.Kernel.circle(radius, unit),\n",
     "                                    reducer = ee.Reducer.stdDev())\n",
     "\n",
-    "# Define a function to calculate the absolute deviation of values from the mean within the window\n",
+    "# Define a function to calculate the absolute deviation of values from the mean within the window - window size is in meters \n",
     "def surface_sa(image, window_size, name):\n",
     "    names = image.bandNames().getInfo()\n",
     "    new_names = [s + name for s in names]\n",
@@ -103,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +155,7 @@
    ],
    "source": [
     "# Map the function over the image collection\n",
-    "sa_img = surface_sa(rap_cover_all_small, 21, \"_sa\")\n",
+    "sa_img = surface_sa(rap_cover_all_small, 5000, \"_sa\")\n",
     "\n",
     "sa_img_band_names = sa_img.bandNames()\n",
     "print('sa_img_band_names:', sa_img_band_names.getInfo())  # ee.List of band names"
@@ -221,6 +196,26 @@
     "Map = geemap.Map(center=(40, -100), zoom=4)\n",
     "Map.addLayer(sa_img, vis_params, \"Tree SA\", True)\n",
     "Map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scale=30\n",
+    "\n",
+    "\n",
+    "task1 = ee.batch.Export.image.toDrive(image = rap_cover_2018,\n",
+    "                                     folder = 'RAP_exports',\n",
+    "                                     description = 'RAP-2018-' + str(scale) + \"m\",\n",
+    "                                     scale = scale,\n",
+    "                                     region = geometry.geometry(),\n",
+    "                                     maxPixels = 1e13,\n",
+    "                                     crs = \"EPSG:5070\")\n",
+    "\n",
+    "task1.start()\n"
    ]
   }
  ],
